auth / sign up changes

--- a/Postcore.Web/Postcore.Web.csproj
+++ b/Postcore.Web/Postcore.Web.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="1.0.3" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.100.1" />
     <PackageReference Include="AWSXRayRecorder" Version="2.6.2" />
+    <PackageReference Include="GoogleAnalyticsTagHelperComponent" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
