enable SNS subscription

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-###################
+﻿###################
 # compiled source #
 ###################
 *.com
@@ -76,3 +76,4 @@ _[Ss]cripts
 
 .vs/
 .vscode/
+Postcore.Web/aws-logger-errors.txt
