--- a/Postcore.Web/appsettings.json
+++ b/Postcore.Web/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "GoogleAnalytics": {
+    "TrackingCode": "UA-117704974-3"
+  },
   "AWS": {
     "Region": "us-west-2",
     "UserPoolClientId": "1vf8td7051jbg8eue7d33o4sel",
@@ -19,5 +22,14 @@
     "DisableXRayTracing": "false",
     "AWSXRayPlugins": "EC2Plugin",
     "UseRuntimeErrors": "true"
+  },
+  "AWS.Logging": {
+    "Region": "us-west-2",
+    "LogGroup": "postcore.net",
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
   }
 }
