--- a/Postcore.Web/Postcore.Web.csproj
+++ b/Postcore.Web/Postcore.Web.csproj
@@ -13,7 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Amazon.AspNetCore.Identity.Cognito" Version="1.0.0" />
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="1.0.3" />
+    <PackageReference Include="AWS.Logger.AspNetCore" Version="2.0.0" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.100.1" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.101.43" />
     <PackageReference Include="AWSXRayRecorder" Version="2.6.2" />
     <PackageReference Include="GoogleAnalyticsTagHelperComponent" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
