--- a/Postcore.Web/appsettings.json
+++ b/Postcore.Web/appsettings.json
@@ -2,7 +2,9 @@
   "ImageBucket": "postcore-bucket",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -25,7 +27,7 @@
   },
   "AWS.Logging": {
     "Region": "us-west-2",
-    "LogGroup": "postcore.net",
+    "LogGroup": "PostcoreLogGroup",
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
