--- a/Postcore.Web/appsettings.json
+++ b/Postcore.Web/appsettings.json
@@ -29,9 +29,11 @@
     "Region": "us-west-2",
     "LogGroup": "PostcoreLogGroup",
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "System": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
     }
   },
   "RekognitionBucket": "image-rekognition"
