--- a/Postcore.Web/Postcore.Web.csproj
+++ b/Postcore.Web/Postcore.Web.csproj
@@ -31,4 +31,9 @@
     <ProjectReference Include="..\Postcore.Web.Infrastructure\Postcore.Web.Infrastructure.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
