--- a/Postcore.Web/appsettings.json
+++ b/Postcore.Web/appsettings.json
@@ -20,6 +20,9 @@
   "AdApi": {
     "BaseUrl": "https://2hms9srw62.execute-api.us-west-2.amazonaws.com/Prod/api/ad"
   },
+  "SearchApi": {
+    "Url": "https://6pu95ie7r3.execute-api.us-west-2.amazonaws.com/Prod/search"
+  },
   "XRay": {
     "DisableXRayTracing": "false",
     "AWSXRayPlugins": "EC2Plugin",
