--- a/Postcore.Web.Core/Postcore.Web.Core.csproj
+++ b/Postcore.Web.Core/Postcore.Web.Core.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Postcore.AdApi.Shared" Version="1.0.0" />
+    <PackageReference Include="Postcore.AdApi.Shared" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
