--- a/Postcore.Web.Infrastructure/Postcore.Web.Infrastructure.csproj
+++ b/Postcore.Web.Infrastructure/Postcore.Web.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.102.17" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Postcore.AdApi.Shared" Version="1.0.0" />
+    <PackageReference Include="Postcore.AdApi.Shared" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
